# computerVision

./: README.md
src/: CMakeLists.txt
src/cgcvcommon/: CMakeLists.txt
src/cv/: CMakeLists.txt
src/cv/task1/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp  test_all_x64.sh
